feat: add /autocomplete endpoint returning a simple suggestion list
Closes #1